--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -31,6 +31,18 @@ form input{
     margin-top: 10px; /* ADICIONADO AQUI POR CAUSA DO CAMPO SENHA */
 }
 
+form textarea{
+    width: 100%;
+    min-height: 140px;
+    color: #333;
+    border: 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 16px 24px;
+    margin-top: 10px; /* ADICIONADO AQUI POR CAUSA DO CAMPO SENHA */
+    line-height: 24px;
+    resize: vertical;
+}
+
 .button{
     width: 100%;
     height: 60px;
